# llm-proxy-web

./: .env.example  .gitignore  DOCKER.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  litellm-config.yaml  start.sh
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: init.sql
backend/src/: lib.rs  logger.rs  main.rs  models.rs  proxy.rs
backend/src/filters/: mod.rs  output_sanitizer.rs  pii_detector.rs
backend/src/indexer/: chunker.rs  extractor.rs  mod.rs  walker.rs
backend/src/rag/: embeddings.rs  index_manager.rs  mod.rs  vector_store.rs  versioning.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  DocumentManager.tsx  LogViewer.tsx  MessageBubble.tsx  ModelSelector.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/types/: index.ts
